feat(modules): import modules for the html section

--- a/src/app/change-password-form/change-password-form.component.html
+++ b/src/app/change-password-form/change-password-form.component.html
@@ -39,7 +39,7 @@
                         <mat-grid-tile>
                            <!--Confirm Password-->
                            <mat-form-field appearance="fill" class="full-width">
-                            <mat-label>Password</mat-label>
+                            <mat-label>Confirm Password</mat-label>
                             <input type="password" matInput formControlName="password"/>
                             <mat-error *ngIf="password?.errors?.['required'] ">Password confirmation is <strong>required</strong></mat-error>
                             <mat-error *ngIf="password?.errors?.['minlength'] && !password?.errors?.['required']">
