--- a/src/app/profile/pages/profile/profile.component.html
+++ b/src/app/profile/pages/profile/profile.component.html
@@ -14,29 +14,30 @@
             <mat-grid-tile>
                 <mat-form-field appearance="fill" class="full-width">
                     <mat-label>First name</mat-label>
-                    <!--<input matInput required [value]="profileData.fist_name" type="text" matInput formControlName="fullName"/>-->
-                    <input value="Rafael Adrian" type="text" matInput formControlName="fullName"/>
+                    <!--<input matInput required [value]="profileData.first_name" type="text" matInput formControlName="fullName"/>-->
+                    <!--<input value="Rafael Adrian" type="text" matInput formControlName="fullName"/>-->
+                    <input [value]="profileData.first_name" type="text" matInput>
                 </mat-form-field>
             </mat-grid-tile>
     
             <mat-grid-tile>
                 <mat-form-field appearance="fill" class="full-width">
                     <mat-label>Last name</mat-label>
-                    <input value="Urquiaga Rodriguez" type="text" matInput formControlName="fullName"/>
+                    <input [value]="profileData.second_name" type="text" matInput/>
                 </mat-form-field>
             </mat-grid-tile>
     
             <mat-grid-tile>
                 <mat-form-field appearance="fill" class="full-width">
                     <mat-label>Email</mat-label>
-                    <input value="rafael@gmail.com" type="email" matInput formControlName="email"/>
+                    <input [value]="profileData.email" type="email" matInput/>
                 </mat-form-field>
             </mat-grid-tile>
     
             <mat-grid-tile>
                 <mat-form-field appearance="fill" class="full-width">
                     <mat-label>Telefono</mat-label>
-                    <input value="989633157" type="text" matInput formControlName="phone" />
+                    <input [value]="profileData.phone" type="text" matInput />
                 </mat-form-field>
             </mat-grid-tile>
     
