feat(routing): add routes for all components

--- a/src/app/change-password-form/change-password-form.component.html
+++ b/src/app/change-password-form/change-password-form.component.html
@@ -51,7 +51,7 @@
                 </mat-grid-list>
             </mat-card-content>
             <mat-card-actions class="boton">
-                <button  [disabled]="!changePasswordForm.valid" mat-flat-button color="primary" type="submit">Save</button>
+                <button  routerLink="/login" [disabled]="!changePasswordForm.valid" mat-flat-button color="primary" type="submit">Save</button>
             </mat-card-actions>
             <ng-template [ngIf]="submitted">
                 <span>Successful Password Change</span>
