--- a/src/app/change-password-form/change-password-form.component.html
+++ b/src/app/change-password-form/change-password-form.component.html
@@ -40,21 +40,20 @@
                             <mat-card-title class="pre-title">Confirm Password</mat-card-title>
                            <mat-form-field appearance="fill" class="full-width">
                             <mat-label>Confirm Password</mat-label>
-                            <input type="password" matInput formControlName="password"/>
-                            <mat-error *ngIf="password?.errors?.['required'] ">Password confirmation is <strong>required</strong></mat-error>
-                            <mat-error *ngIf="password?.errors?.['minlength'] && !password?.errors?.['required']">
+                            <input type="confirmPassword" matInput formControlName="confirmPassword"/>
+                            <mat-error *ngIf="confirmPassword?.errors?.['required'] ">Password confirmation is <strong>required</strong></mat-error>
+                            <mat-error *ngIf="confirmPassword?.errors?.['minlength'] && !confirmPassword?.errors?.['required']">
                                 Password must be at least <strong>5</strong> characters length
                             </mat-error>
                         </mat-form-field>
                         </mat-grid-tile>
-                        
                 </mat-grid-list>
             </mat-card-content>
             <mat-card-actions class="boton">
                 <button  routerLink="/login" [disabled]="!changePasswordForm.valid" mat-flat-button color="primary" type="submit">Save</button>
             </mat-card-actions>
             <ng-template [ngIf]="submitted">
-                <span>Successful Password Change</span>
+                <span>Successful Password Change!</span>
             </ng-template>
         </form>
     </mat-card>
