fix(change-password): updated password match validation

--- a/src/app/change-password-form/change-password-form.component.html
+++ b/src/app/change-password-form/change-password-form.component.html
@@ -40,11 +40,12 @@
                             <mat-card-title class="pre-title">Confirm Password</mat-card-title>
                            <mat-form-field appearance="fill" class="full-width">
                             <mat-label>Confirm Password</mat-label>
-                            <input type="confirmPassword" matInput formControlName="confirmPassword"/>
+                            <input type="password" matInput formControlName="confirmPassword"/>
                             <mat-error *ngIf="confirmPassword?.errors?.['required'] ">Password confirmation is <strong>required</strong></mat-error>
                             <mat-error *ngIf="confirmPassword?.errors?.['minlength'] && !confirmPassword?.errors?.['required']">
                                 Password must be at least <strong>5</strong> characters length
                             </mat-error>
+                            <mat-error *ngIf="confirmPassword?.errors?.['MustMatch']">Confirm Password didn't match</mat-error>
                         </mat-form-field>
                         </mat-grid-tile>
                 </mat-grid-list>
