fix(routing): fix routing for users component

--- a/src/app/users/pages/users/users.component.html
+++ b/src/app/users/pages/users/users.component.html
@@ -119,7 +119,7 @@
             <button mat-button color="warn" (click)="cancelEdit()">Cancel</button>
         </ng-container>
         <ng-template #elseTemplate>
-            <button mat-button color="primary">Submit</button>
+            <button routerLink="/profile" mat-button color="primary">Submit</button>
         </ng-template>
 
     </form>
