--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -59,13 +59,15 @@
 
       <!-- button -->
       <mat-card-actions id="loginButtonContainer">
-        <button routerLink="/profile" [disabled]="!loginForm.valid" mat-flat-button color="primary" type="submit">Login</button>
+        <button [disabled]="!loginForm.valid" mat-flat-button color="primary" type="submit">Login</button>
       </mat-card-actions>
 
       <!-- this part will be displayed, only if submitted is true -->
+      <!--
       <ng-template [ngIf]="submitted">
         <span>Form Submitted Successfully!</span>
       </ng-template>
+    -->
     </form>
 
   </mat-card>
