feat(landingpage): linked landing page to our web applicattion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
             <button mat-icon-button (click)="isSidenavOpen=!isSidenavOpen">
                 <mat-icon>menu</mat-icon>
             </button>
-            <h1>Import It</h1>
+           <a href="https://mirai-open-source-sw52-grupo-3.github.io/Landing-Page-Import-It/public/">
+           <img   src="https://i.imgur.com/IKD1Wgn.jpg" style=width:130px></a>
         </mat-toolbar-row>
     </mat-toolbar>
 
