--- a/src/app/profile/pages/profile/profile.component.html
+++ b/src/app/profile/pages/profile/profile.component.html
@@ -13,17 +13,15 @@
             
             <mat-grid-tile>
                 <mat-form-field appearance="fill" class="full-width">
-                    <mat-label>First name</mat-label>
-                    <!--<input matInput required [value]="profileData.first_name" type="text" matInput formControlName="fullName"/>-->
-                    <!--<input value="Rafael Adrian" type="text" matInput formControlName="fullName"/>-->
-                    <input [value]="profileData.first_name" type="text" matInput>
+                    <mat-label>Full Name</mat-label>
+                    <input [value]="profileData.name" type="text" matInput>
                 </mat-form-field>
             </mat-grid-tile>
     
             <mat-grid-tile>
                 <mat-form-field appearance="fill" class="full-width">
-                    <mat-label>Last name</mat-label>
-                    <input [value]="profileData.second_name" type="text" matInput/>
+                    <mat-label>Genre</mat-label>
+                    <input [value]="profileData.genre" type="text" matInput/>
                 </mat-form-field>
             </mat-grid-tile>
     
