added structure and style to the calculator component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
                 <a mat-list-item>
                     <mat-icon>room</mat-icon> Directions
                 </a>
-                <a mat-list-item>
+                <a mat-list-item [routerLink]="'/calculator'">
                     <mat-icon> monetization_on</mat-icon> Calculator
                 </a>
                 <a mat-list-item>
