feat(wallet):added html code for wallet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
                 <a mat-list-item>
                     <mat-icon>shop_two</mat-icon> Buy Wholesale
                 </a>
-                <a mat-list-item>
+                <a mat-list-item routerLink="/wallet">
                     <mat-icon>account_balance_wallet</mat-icon> My Wallet
                 </a>
                 <a mat-list-item>
