feat(agregattions): added new components and code to this sections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,10 +33,10 @@
                 <a mat-list-item>
                     <mat-icon> monetization_on</mat-icon> Calculator
                 </a>
-                <a mat-list-item>
+                <a mat-list-item routerLink="{{asa}}">
                     <mat-icon>style</mat-icon> Coupons
                 </a>
-                <a mat-list-item>
+                <a mat-list-item routerLink="/domestic-shipment">
                     <mat-icon> local_shipping</mat-icon> Domestic Shipments
                 </a>
                 <a mat-list-item>
