--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -15,8 +15,9 @@
 
 .form-card {
   width: 70%;
-  padding: 5% 0;
+  padding: 2% 0;
   border: 3px solid #2980B9;
+  border-radius: 1rem;
   background-color: #F0F0F0;
   display: flex;
   flex-flow: column;
@@ -63,9 +64,8 @@
 .img-container {
   border: 3px solid #2980B9;
   border-radius: 10px;
-  padding: 2%;
+  padding: 1%;
   width: 25%;
-
 }
 
 .img-container img {
