--- a/src/app/fasty/fasty.component.html
+++ b/src/app/fasty/fasty.component.html
@@ -1,31 +1,34 @@
-<div class="page-title">
-  <h1><strong>Choose Product</strong></h1>
-</div>
-<div class="category-container" fxLayout="column">
-  <h2 class="category-title">Technology</h2>
-  <h3>Most frequently ordered technology products</h3>
+<div class="page-container" fxLayout="column" fxLayoutAlign="center center">
+  <div class="page-title">
+    <h1><strong>Choose Product</strong></h1>
+  </div>
 
-  <section class="product-list" fxLayout="column" fxLayoutAlign="space-between center">
+  <div class="category-container" fxLayout="column"  *ngFor="let category of storeProducts">
+    <h2 class="category-title">{{category.name}}</h2>
+    <h3>Most frequently ordered {{category.name.toLowerCase()}} products</h3>
 
-    <div class="single-product" fxLayout="column" fxLayoutAlign="center center">
+    <section class="product-list" fxLayout="row" fxLayoutAlign="space-between center">
 
-      <div class="product-img">
-        <img alt="Product image" src="https://m.media-amazon.com/images/I/61645xE1Z5L._AC_SX679_.jpg">
+      <div class="single-product" fxLayout="column" fxLayoutAlign="center center" *ngFor="let product of category.productList">
+
+        <div class="product-img">
+          <img alt="Product image" [src]="product.imgURL">
+        </div>
+
+        <div class="product-name">
+          <h2>{{product.name}}</h2>
+        </div>
+
+        <div class="product-price">
+          <h2>$ {{product.price}}</h2>
+        </div>
+
+        <div class="button-container">
+          <button mat-flat-button color="primary" type="submit">See more</button>
+        </div>
+
       </div>
 
-      <div class="product-name">
-        <h2>Galaxy Watch</h2>
-      </div>
-
-      <div class="product-price">
-        <h2>$ 120</h2>
-      </div>
-
-      <div class="button-container">
-        <button mat-flat-button color="primary" type="submit">See more</button>
-      </div>
-
-    </div>
-
-  </section>
+    </section>
+  </div>
 </div>
