--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
                 <a mat-list-item>
                     <mat-icon> local_shipping</mat-icon> Domestic Shipments
                 </a>
-                <a mat-list-item>
+                <a mat-list-item routerLink="/fasty">
                     <mat-icon> local_offer</mat-icon> Fasty
                 </a>
                 <a mat-list-item>
