--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
                 <a mat-list-item>
                     <mat-icon> chat</mat-icon> Chats
                 </a>
-                <a mat-list-item>
+                <a mat-list-item routerLink="/direction">
                     <mat-icon>room</mat-icon> Directions
                 </a>
                 <a mat-list-item>
