--- a/src/app/chats/chats.component.css
+++ b/src/app/chats/chats.component.css
@@ -1,6 +1,43 @@
+/*html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.form-container {
+    display: block;
+    max-width: 300px;
+    margin: auto;
+
+    background: #eceff1;
+    padding: 48px;
+    border-radius: 16px;
+}
+
+.form-container mat-form-field {
+    width: 100%;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.margin-top {
+    margin-top: 16px;
+}
+
+.text-center {
+    text-align: center;
+}
+*/
 .container {
-    display: felx;
-    height: calc(10vh - 70 px);
+    display: flex;
+    height: calc(100vh - 70 px);
 }
 
 .chat-list {
@@ -8,4 +45,14 @@
     margin: 16px;
     background: #c5cae9;
     border-radius: 16px;
+}
+
+.messages {
+    width: 60%;
+    margin: 16px;
+    border-radius: 16px;
+}
+
+.search-input {
+    margin: 24px;
 }
