fix(urlorder): modification card and add alert

--- a/src/app/urlorder/urlorder.component.html
+++ b/src/app/urlorder/urlorder.component.html
@@ -1,6 +1,7 @@
 <div class="form-container">
   <form (submit)="onSubmit()" #urlorderForm="ngForm" [formGroup]="registerForm">
-    <mat-card-title class="pre-title">Order Register</mat-card-title>
+
+    <mat-card-title class="highclass">Order Register</mat-card-title>
     <mat-card>
 
       <mat-card-content>
