fix(urlorder): add delete order and change option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <a mat-list-item routerLink="/profile">
         <mat-icon>person</mat-icon>Profile
       </a>
-      <a mat-list-item>
+      <a mat-list-item routerLink="/urlorder">
         <mat-icon>shop</mat-icon> My Orders
       </a>
       <a mat-list-item>
@@ -41,7 +41,7 @@
       <a mat-list-item>
         <mat-icon> local_offer</mat-icon> Fasty
       </a>
-      <a mat-list-item routerLink="/urlorder">
+      <a mat-list-item routerLink="/generateorder">
         <mat-icon>code</mat-icon> URL Order
       </a>
     </mat-nav-list>
