fix(direction):add register fuction and interface

--- a/src/app/direction/direction.component.html
+++ b/src/app/direction/direction.component.html
@@ -3,7 +3,7 @@
     <h1 style="text-align:left">My Directions </h1>
     <div routerLink="/direction/register">
       <mat-card class="w-full">
-        <img mat-card-image [src]="directionImgSource" alt="add">
+        <img mat-card-image [src]="directionImgSource" alt="add" routerLink="/directionregister">
       </mat-card>
     </div>
   </div>
