--- a/src/app/directionregister/directionregister.component.html
+++ b/src/app/directionregister/directionregister.component.html
@@ -63,6 +63,6 @@
     </mat-card-content>
 
     <button [disabled]="!directionForm.valid" mat-flat-button color="primary" type="submit">Submit</button>
-
+    <button mat-flat-button color="primary" type="cancel" routerLink="/direction">Cancel</button>
   </form>
 </div>
