--- a/src/app/direction/direction.component.css
+++ b/src/app/direction/direction.component.css
@@ -10,3 +10,42 @@
 width: 190px;
 height: 190px;
 }
+.dsc-card {
+  height: 200px;
+  width: 350px;
+  border: 1px solid Orgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  box-shadow: 0px epx Gpx 1px Orgba(e, e, e, e.15);
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  border-left: 4px solid rgb(255, 255, 255);
+  transition: 0.7s all ease-in-out;
+  background-color: #d1d1d1;
+}
+.grid2c {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 0 20px;
+  margin-top: 40px;;
+  justify-items: center;
+}
+
+.dsc-card:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+.dsc-content {
+  border-left: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 0.5rem;
+
+}
+
+
+
+.imageTall{
+width:150px;
+height:150px;
+}
