fix(direction): change card to interface direction

--- a/src/app/direction/direction.component.html
+++ b/src/app/direction/direction.component.html
@@ -11,6 +11,7 @@
           <h4>{{direction.lastname}}</h4>
           <h4>{{direction.direction1}}</h4>
           <h4>{{direction.phone}}</h4>
+          <h4>{{direction.district}}</h4>
           <h4>{{direction.departament}}</h4>
         </div>
         <img class="imageTall" src="https://i.imgur.com/weXt435.png">
