--- a/src/app/urlordermain/urlordermain.component.css
+++ b/src/app/urlordermain/urlordermain.component.css
@@ -4,7 +4,7 @@
   padding: 7% 0;
 }
 .cardpadding{
-  padding-left:18rem;
+  padding-left:5rem;
  }
 
  .buttonpadding{
@@ -30,7 +30,37 @@
    padding-bottom:2rem;
  }
 
- .paddingcard{
+.paddingcard{
 
-  padding-bottom:5rem;
+ height: 350px;
+ width:1100px;
+ padding-left:3rem;
+ padding-top:1rem;
 }
+.paddingprincipal{
+
+  height: 400px;
+  width:1200px;
+ }
+
+
+ .colum{
+  display:flex;
+  flex-direction: column;
+}
+.row{
+  display:flex;
+  flex-direction: row;
+}
+.w-full{
+  width: 100%;
+}
+.padimg{
+  width: 400px;
+  height: 300px;
+  margin: 0;
+  padding-right: 10rem;
+  padding-top:2rem;
+
+}
+
