--- a/src/app/urlordermain/urlordermain.component.html
+++ b/src/app/urlordermain/urlordermain.component.html
@@ -8,18 +8,30 @@
         </mat-card-actions>
       </mat-card>
     </div>
-    <div class="paddingcard">
 
-      <mat-card *ngFor="let urlorder of urlorder" class="paddingcard">
-        <h1><strong>{{urlorder.name}}</strong></h1><br>
-        <h2>{{urlorder.tittle}}</h2>
-        <h4><a href={{urlorder.url}}>{{urlorder.url}}</a></h4>
-        <h4>Price: {{urlorder.price}}$</h4>
-        <h4>Comision: {{urlorder.comision}}$</h4>
-        <h4>Weight:{{urlorder.weight}}</h4>
-        <a href="javascript:void(0)" (click)="deleteUrlorders(urlorder.id)">
-          <mat-icon>delete</mat-icon>
-        </a>
+    <div class="colum">
+      <mat-card *ngFor="let urlorder of urlorder" class="paddingprincipal row">
+
+
+        <div class="paddingcard">
+
+          <h1><strong>{{urlorder.name}}</strong></h1><br>
+          <h2>{{urlorder.tittle}}</h2>
+          <h4><a href={{urlorder.url}}>Get the main details here!</a></h4>
+          <h4>Price: {{urlorder.price}}$</h4>
+          <h4>Comision: {{urlorder.comision}}$</h4>
+          <h4>Weight:{{urlorder.weight}}</h4>
+          <button routerLink="/urlorder" (click)="deleteUrlorders(urlorder.id)" mat-flat-button color="primary"
+            type="delete"><a href="javascript:location.reload()" style="color:rgb(255, 255, 255);">Delete</a></button>
+        </div>
+
+        <img class="padimg" src="https://i.imgur.com/JVdarAP.png">
+
+
+
+
+
+
       </mat-card>
     </div>
   </div>
