--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,9 @@
       <a mat-list-item routerLink="/generateorder">
         <mat-icon>code</mat-icon> URL Order
       </a>
+      <a mat-list-item routerLink="/login">
+        <mat-icon>power_settings_new</mat-icon> log out
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
