--- a/src/app/buy-wholesale/buy-wholesale.component.html
+++ b/src/app/buy-wholesale/buy-wholesale.component.html
@@ -1,1 +1,10 @@
-<p>buy-wholesale works!</p>
+<h1>Buy wholesale</h1>
+
+<mat-tab-group> 
+  <mat-tab  label="To buy"><router-outlet></router-outlet></mat-tab> 
+  <mat-tab  label="Waiting"> Contenido 2 </mat-tab> 
+  <mat-tab  label="Favorites"> Contenido 3 </mat-tab> 
+  <mat-tab  label="Record"> Contenido 4 </mat-tab> 
+</mat-tab-group>
+
+
