--- a/src/app/product-wholesale/product-wholesale.component.html
+++ b/src/app/product-wholesale/product-wholesale.component.html
@@ -1,1 +1,112 @@
-<p>product-wholesale works!</p>
+<mat-grid-list [cols]="numberOfColumns" rowHeight="600px" class="mat-grid-list-products"
+    (window:resize)="onResize($event)">
+        <mat-grid-tile *ngFor="let productWholesale of productsWholesale">
+            <mat-card class="example-card" [routerLink]="['/buy-wholesale/product-wholesale-detail', productWholesale.id]">
+                <mat-card-header>
+                    <mat-card-title>{{productWholesale.name}}</mat-card-title>
+                    <mat-card-subtitle>Small interval</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image src={{productWholesale.picture}} alt="Photo of a IPHONE 13 PRO MAX -128GB-GOLD">
+                <mat-card-content>
+                    <ul>
+                        <li>{{productWholesale.principalFeature1}}</li>
+                        <li>{{productWholesale.principalFeature2}}</li>
+                        <li>{{productWholesale.principalFeature3}}</li>
+                    </ul>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-button>Buy S/{{productWholesale.price}}</button>
+                </mat-card-actions>
+            </mat-card>
+        </mat-grid-tile>
+</mat-grid-list>
+
+<!--
+<mat-card class="example-particular-card">
+    <form>
+        <div class="body-payment-process">
+            <a>
+                <mat-icon>keyboard_arrow_left</mat-icon>Back
+            </a>
+            <h2>Choose your Payment method</h2>
+            <div class="row-payment-process">
+                <mat-form-field appearance="fill">
+                    <mat-label>Payment method</mat-label>
+                    <mat-select [(ngModel)]="selectedValue" name="financialInstitution">
+                        <mat-option *ngFor="let financialInstitution of financialInstitutions"
+                            [value]="financialInstitution.value">
+                            {{financialInstitution.viewValue}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                
+            </div>
+
+            <h2>Card Information</h2>
+            <div class="row-payment-process">
+                <div class="first-section">
+                    <mat-form-field appearance="fill"  class="mat-form-field-large">
+                        <mat-label>Card Number</mat-label>
+                        <input matInput maxlength="16" placeholder="Ex. 1111222233334444">
+                    </mat-form-field>
+                </div>
+
+                <div class="second-section">
+                    <mat-form-field appearance="fill">
+                        <mat-label>CCV</mat-label>
+                        <input matInput maxlength="3" placeholder="Ex. 123">
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <div class="row-payment-process">
+                <div class="thirt-section">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Expiry Month</mat-label>
+                        <mat-select [(ngModel)]="selectedValue" name="month">
+                            <mat-option *ngFor="let month of months"
+                                [value]="month.value">
+                                {{month.viewValue}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+
+                <div class="fourth-section">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Expiry Year</mat-label>
+                        <input matInput maxlength="3" placeholder="Ex. 123">
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <div class="resume-invoice">
+                <div class="row-cost">
+                    <div class="name-cost"><p>Tax</p></div>
+                    <div class="value-cost"><p>$1000</p></div>
+                </div>
+                <div class="row-cost">
+                    <div class="name-cost"><p>Transportation Commission</p></div>
+                    <div class="value-cost"><p>$1000</p></div>
+                </div>
+                <div class="row-cost">
+                    <div class="name-cost"><p>Import It Service</p></div>
+                    <div class="value-cost"><p>$1000</p></div>
+                </div>
+                <div class="row-cost">
+                    <div class="name-cost"><p>Total</p></div>
+                    <div class="value-cost"><p>$1000</p></div>
+                </div>
+
+            </div>
+            
+            <div class="button-pay">
+                <button mat-flat-button color="primary">Pay</button>
+            </div>
+            
+        </div>
+
+    </form>
+
+</mat-card>
+-->
