--- a/src/app/profile/pages/profile/profile.component.html
+++ b/src/app/profile/pages/profile/profile.component.html
@@ -1,54 +1,56 @@
 <div class="content-frofile">
-    <h1>My profile</h1>
+  <h1>My profile</h1>
 
-    <mat-card>
+  <mat-card>
 
-        <div class="divImage">
-            <img src="../../../../assets/images/buyerProfile.jpg">
-        </div>
+    <div class="divImage">
+      <img src="../../../../assets/images/buyerProfile.jpg">
+    </div>
 
-        <form>
-            <mat-card-content>
-                <mat-grid-list cols="1" rowHeight="100px" class="clase">
+    <form>
+      <mat-card-content>
+        <mat-grid-list cols="1" rowHeight="100px" class="clase">
+          <div *ngFor="let user of user">
 
-                    <mat-grid-tile>
-                        <mat-form-field appearance="fill" class="full-width">
-                            <mat-label>First name</mat-label>
-                            <!--<input matInput required [value]="profileData.first_name" type="text" matInput formControlName="fullName"/>-->
-                            <!--<input value="Rafael Adrian" type="text" matInput formControlName="fullName"/>-->
-                            <input [value]="profileData.first_name" type="text" matInput>
-                        </mat-form-field>
-                    </mat-grid-tile>
+            <mat-grid-tile>
+              <mat-form-field appearance="fill" class="full-width">
+                <mat-label>First name</mat-label>
+                <!--<input matInput required [value]="profileData.first_name" type="text" matInput formControlName="fullName"/>-->
+                <!--<input value="Rafael Adrian" type="text" matInput formControlName="fullName"/>-->
+                <input [value]="user.name" type="text" matInput>
+              </mat-form-field>
+            </mat-grid-tile>
 
-                    <mat-grid-tile>
-                        <mat-form-field appearance="fill" class="full-width">
-                            <mat-label>Last name</mat-label>
-                            <input [value]="profileData.second_name" type="text" matInput />
-                        </mat-form-field>
-                    </mat-grid-tile>
+            <mat-grid-tile>
+              <mat-form-field appearance="fill" class="full-width">
+                <mat-label>DNI</mat-label>
+                <input [value]="user.dni" type="text" matInput />
+              </mat-form-field>
+            </mat-grid-tile>
 
-                    <mat-grid-tile>
-                        <mat-form-field appearance="fill" class="full-width">
-                            <mat-label>Email</mat-label>
-                            <input [value]="profileData.email" type="email" matInput />
-                        </mat-form-field>
-                    </mat-grid-tile>
+            <mat-grid-tile>
+              <mat-form-field appearance="fill" class="full-width">
+                <mat-label>Email</mat-label>
+                <input [value]="user.email" type="email" matInput />
+              </mat-form-field>
+            </mat-grid-tile>
 
-                    <mat-grid-tile>
-                        <mat-form-field appearance="fill" class="full-width">
-                            <mat-label>Telefono</mat-label>
-                            <input [value]="profileData.phone" type="text" matInput />
-                        </mat-form-field>
-                    </mat-grid-tile>
+            <mat-grid-tile>
+              <mat-form-field appearance="fill" class="full-width">
+                <mat-label>Telefono</mat-label>
+                <input [value]="user.phone" type="text" matInput />
+              </mat-form-field>
+            </mat-grid-tile>
 
-                </mat-grid-list>
-            </mat-card-content>
+          </div>
+        </mat-grid-list>
+      </mat-card-content>
 
-            <mat-card-actions align="end">
-                <button mat-button>Update</button>
-            </mat-card-actions>
+      <mat-card-actions align="end">
+        <button mat-button>Update</button>
+      </mat-card-actions>
 
-        </form>
+    </form>
 
-    </mat-card>
+  </mat-card>
 </div>
