fix(json): add json information

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <a mat-list-item routerLink="/urlorder">
         <mat-icon>shop</mat-icon> My Orders
       </a>
-      <a mat-list-item>
+      <a mat-list-item routerLink="/buy-wholesale">
         <mat-icon>shop_two</mat-icon> Buy Wholesale
       </a>
       <a mat-list-item routerLink="/wallet">
