fix(chats): handled chats bug

--- a/src/app/profile/pages/profile/profile.component.html
+++ b/src/app/profile/pages/profile/profile.component.html
@@ -14,7 +14,7 @@
 
             <mat-grid-tile>
               <mat-form-field appearance="fill" class="full-width">
-                <mat-label>First name</mat-label>
+                <mat-label>Name</mat-label>
                 <!--<input matInput required [value]="profileData.first_name" type="text" matInput formControlName="fullName"/>-->
                 <!--<input value="Rafael Adrian" type="text" matInput formControlName="fullName"/>-->
                 <input [value]="user.name" type="text" matInput>
