feat(orders): added dependencies relationed with the customers order component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
       <a mat-list-item routerLink="/urlorder">
         <mat-icon>shop</mat-icon> My Orders
       </a>
+      <a mat-list-item routerLink="/customer-orders">
+        <mat-icon>shop</mat-icon> Customer Orders
+      </a>
       <a mat-list-item routerLink="/buy-wholesale">
         <mat-icon>shop_two</mat-icon> Buy Wholesale
       </a>
