--- a/src/app/fasty/fasty.component.html
+++ b/src/app/fasty/fasty.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="button-container">
-          <button mat-flat-button color="primary" type="submit">See more</button>
+          <button mat-flat-button color="primary" type="submit" routerLink="/singleProduct/{{category.name.toLowerCase()}}/{{product.id}}">See more</button>
         </div>
 
       </div>
